// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxAsyncSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "da95abcf6bbf9b157ff6",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 591,
              "initialSize": 12180,
              "size": 12771,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12180,
              "size": 12322,
            },
            "compilation": "da95abcf6bbf9b157ff6",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 449,
                "ok": false,
                "percent": 316.1971830985915,
              },
              "initialSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "size": Object {
                "absolute": 449,
                "ok": true,
                "percent": 3.643888979061849,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 0.44 kb (316.20%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff not match - global 1`] = `Array []`;

exports[`maxAsyncSizeDiff not match - override global 1`] = `Array []`;

exports[`maxAsyncSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "da95abcf6bbf9b157ff6",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 591,
              "initialSize": 12180,
              "size": 12771,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12180,
              "size": 12322,
            },
            "compilation": "da95abcf6bbf9b157ff6",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 449,
                "ok": false,
                "percent": 316.1971830985915,
              },
              "initialSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "size": Object {
                "absolute": 449,
                "ok": true,
                "percent": 3.643888979061849,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 0.44 kb (316.20%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "da95abcf6bbf9b157ff6",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 29035,
              "size": 30235,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12253,
              "size": 12395,
            },
            "compilation": "da95abcf6bbf9b157ff6",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": false,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 16782,
                "ok": true,
                "percent": 136.96237656084222,
              },
              "size": Object {
                "absolute": 17840,
                "ok": true,
                "percent": 143.9290036304962,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 1.03 kb (745.07%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff global 1`] = `Array []`;

exports[`maxInitialSizeDiff not match - global 1`] = `Array []`;

exports[`maxInitialSizeDiff not match - override global 1`] = `Array []`;

exports[`maxInitialSizeDiff override global 1`] = `Array []`;

exports[`maxInitialSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "da95abcf6bbf9b157ff6",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 8338,
              "size": 8338,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 799,
              "size": 799,
            },
            "compilation": "da95abcf6bbf9b157ff6",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 7539,
                "ok": false,
                "percent": 943.5544430538173,
              },
              "size": Object {
                "absolute": 7539,
                "ok": true,
                "percent": 943.5544430538173,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 7.36 kb (943.55%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "da95abcf6bbf9b157ff6",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 29035,
              "size": 30235,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12253,
              "size": 12395,
            },
            "compilation": "da95abcf6bbf9b157ff6",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": true,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 16782,
                "ok": false,
                "percent": 136.96237656084222,
              },
              "size": Object {
                "absolute": 17840,
                "ok": true,
                "percent": 143.9290036304962,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 16.39 kb (136.96%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "da95abcf6bbf9b157ff6",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 591,
              "initialSize": 12180,
              "size": 12771,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12180,
              "size": 12322,
            },
            "compilation": "da95abcf6bbf9b157ff6",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 449,
                "ok": true,
                "percent": 316.1971830985915,
              },
              "initialSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "size": Object {
                "absolute": 449,
                "ok": false,
                "percent": 3.643888979061849,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 0.44 kb (3.64%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff not match - global 1`] = `Array []`;

exports[`maxSizeDiff not match - override global 1`] = `Array []`;

exports[`maxSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "da95abcf6bbf9b157ff6",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 591,
              "initialSize": 12180,
              "size": 12771,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12180,
              "size": 12322,
            },
            "compilation": "da95abcf6bbf9b157ff6",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 449,
                "ok": true,
                "percent": 316.1971830985915,
              },
              "initialSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "size": Object {
                "absolute": 449,
                "ok": false,
                "percent": 3.643888979061849,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 0.44 kb (3.64%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "da95abcf6bbf9b157ff6",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 8338,
              "size": 8338,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 799,
              "size": 799,
            },
            "compilation": "da95abcf6bbf9b157ff6",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 7539,
                "ok": true,
                "percent": 943.5544430538173,
              },
              "size": Object {
                "absolute": 7539,
                "ok": false,
                "percent": 943.5544430538173,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 7.36 kb (943.55%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "da95abcf6bbf9b157ff6",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 29035,
              "size": 30235,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12253,
              "size": 12395,
            },
            "compilation": "da95abcf6bbf9b157ff6",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": true,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 16782,
                "ok": true,
                "percent": 136.96237656084222,
              },
              "size": Object {
                "absolute": 17840,
                "ok": false,
                "percent": 143.9290036304962,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 17.42 kb (143.93%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
